<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.geuquiz.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_answer"
        android:name="com.geuquiz.ui.question.AnswerFragment"
        android:label="@string/menu_answer"
        tools:layout="@layout/fragment_answer" >
        <action
            android:id="@+id/action_answer_to_question"
            app:destination="@id/nav_question"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out" />
        <argument
            android:name="question"
            app:argType="com.geuquiz.model.Question" />
        <argument
            android:name="index"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/nav_question"
        android:name="com.geuquiz.ui.question.QuestionFragment"
        android:label="@string/menu_question"
        tools:layout="@layout/fragment_question" >
        <action
            android:id="@+id/action_question_to_answer"
            app:destination="@id/nav_answer"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out" />
        <argument
            android:name="index"
            app:argType="integer"
            android:defaultValue="0" />
        <argument
            android:name="cheat"
            app:argType="boolean"
            android:defaultValue="false" />
    </fragment>
</navigation>